SSO-50 updated approve&reject consents to return json
